style.css
@font-face {
    font-family: pico_mono;
    src: url(pico-8-mono.ttf);
    font-weight: bold;
}

body {
    background-color: #000000;
    display: grid;
    place-items: center;
    margin: 0;
    padding: 0;
    font-family: pico_mono;
    color: #f5f5f5;
}

p, h1, h3 {
    /*noinspection CssNoGenericFontName*/
    font-family: pico_mono;
    color: #f5f5f5;
    margin-left: 20px;

    -webkit-touch-callout: none;
    -webkit-user-select: none;
    -moz-user-select: none;
    -ms-user-select: none;
    user-select: none;
}

.main {
    display: flex;
    /*justify-content: space-between;*/
    width: 100%;
}

.left {
    width: 32%;
    text-align: left;
}

.center {
    width: 36%;
    text-align: center;
}

.right {
    width: 32%;
    text-align: right;
}

.halfvhbr {
    display: block;
    content: "";
    margin-top: 50vh;
}

